--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
-name = m0rkcoin_tip_bot
+name = talleo_tip_bot
 description-file = README.md
 python_requires = >=3.6
 
 [files]
 packages =
-    m0rkcoin_tip_bot
+    talleo_tip_bot
