--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,13 +1,19 @@
 -i
-attrs==17.4.0
-coverage==4.4.2
-flake8==3.5.0
+attrs==19.3.0
+coverage==5.2
+flake8==3.8.3
+importlib-metadata==1.7.0
 mccabe==0.6.1
-pluggy==0.6.0
-py==1.5.2
-pycodestyle==2.3.1
-pyflakes==1.6.0
-pytest-cov==2.5.1
-pytest==3.3.2
-six==1.11.0
-yapf==0.20.0
+more-itertools==8.4.0
+packaging==20.4
+pluggy==0.13.1
+py==1.9.0
+pycodestyle==2.6.0
+pyflakes==2.2.0
+pyparsing==2.4.7
+pytest-cov==2.10.0
+pytest==5.4.3
+six==1.15.0
+wcwidth==0.2.5
+yapf==0.30.0
+zipp==3.1.0
