--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,21 @@
 -i
-aiohttp==1.0.5
-async-timeout==2.0.0
-certifi==2017.11.5
+aiohttp==3.6.2
+async-timeout==3.0.1
+attrs==19.3.0
+certifi==2020.6.20
 chardet==3.0.4
-click==6.7
-discord.py==0.16.12
-idna==2.6
-mongoengine==0.15.0
-multidict==3.3.2
-munch==2.2.0
-pymongo==3.6.0
-pyyaml==3.12
-requests==2.18.4
-six==1.11.0
-urllib3==1.22
-websockets==3.4
+click==7.1.2
+discord.py==1.3.4
+idna-ssl==1.1.0
+idna==2.10
+mongoengine==0.20.0
+multidict==4.7.6
+munch==2.5.0
+pymongo==3.10.1
+pyyaml==5.3.1
+requests==2.24.0
+six==1.15.0
+typing-extensions==3.7.4.2
+urllib3==1.25.9
+websockets==8.1
+yarl==1.4.2
