--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,19 +1,36 @@
--i
+aiohttp==3.6.2
+async-timeout==3.0.1
 attrs==19.3.0
+certifi==2020.6.20
+chardet==3.0.4
+click==7.1.2
 coverage==5.2
+discord.py==1.3.4
 flake8==3.8.3
+idna-ssl==1.1.0
+idna==2.10
 importlib-metadata==1.7.0
 mccabe==0.6.1
+mongoengine==0.20.0
 more-itertools==8.4.0
+multidict==4.7.6
+munch==2.5.0
 packaging==20.4
 pluggy==0.13.1
 py==1.9.0
 pycodestyle==2.6.0
 pyflakes==2.2.0
+pymongo==3.10.1
 pyparsing==2.4.7
 pytest-cov==2.10.0
 pytest==5.4.3
+pyyaml==5.3.1
+requests==2.24.0
 six==1.15.0
+typing-extensions==3.7.4.2
+urllib3==1.25.9
 wcwidth==0.2.5
+websockets==8.1
 yapf==0.30.0
+yarl==1.4.2
 zipp==3.1.0
