--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,36 +1,40 @@
-aiohttp==3.6.2
-async-timeout==3.0.1
-attrs==19.3.0
-certifi==2020.6.20
-chardet==3.0.4
-click==7.1.2
-coverage==5.2
-discord.py==1.3.4
-flake8==3.8.3
-idna-ssl==1.1.0
-idna==2.10
-importlib-metadata==1.7.0
-mccabe==0.6.1
-mongoengine==0.20.0
-more-itertools==8.4.0
-multidict==4.7.6
+attrs==22.1.0
+certifi==2022.9.14
+coverage[toml]==6.4.4
+distlib==0.3.6
+filelock==3.8.0
+flake8==5.0.4
+iniconfig==1.1.1
+mccabe==0.7.0
+packaging==21.3
+pipenv==2022.9.8
+platformdirs==2.5.2
+pluggy==1.0.0
+py==1.11.0
+pycodestyle==2.9.1
+pyflakes==2.5.0
+pyparsing==3.0.9
+pytest==7.1.3
+pytest-cov==3.0.0
+setuptools==65.3.0
+tomli==2.0.1
+virtualenv==20.16.5
+virtualenv-clone==0.5.7
+yapf==0.32.0
+aiohttp==3.8.1
+aiosignal==1.2.0
+async-timeout==4.0.2
+charset-normalizer==2.1.1
+click==8.1.3
+discord-py==2.0.1
+frozenlist==1.3.1
+idna==3.4
+mongoengine==0.24.2
+multidict==6.0.2
 munch==2.5.0
-packaging==20.4
-pluggy==0.13.1
-py==1.9.0
-pycodestyle==2.6.0
-pyflakes==2.2.0
-pymongo==3.10.1
-pyparsing==2.4.7
-pytest-cov==2.10.0
-pytest==5.4.3
-pyyaml==5.3.1
-requests==2.24.0
-six==1.15.0
-typing-extensions==3.7.4.2
-urllib3==1.25.9
-wcwidth==0.2.5
-websockets==8.1
-yapf==0.30.0
-yarl==1.4.2
-zipp==3.1.0
+pymongo==4.2.0
+pyyaml==6.0
+requests==2.28.1
+six==1.16.0
+urllib3==1.26.12
+yarl==1.8.1
