--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,19 @@
-aiohttp==3.6.2
-async-timeout==3.0.1
-attrs==19.3.0
-certifi==2020.6.20
-chardet==3.0.4
-click==7.1.2
-discord.py==1.3.4
-idna-ssl==1.1.0
-idna==2.10
-mongoengine==0.20.0
-multidict==4.7.6
+aiohttp==3.8.1
+aiosignal==1.2.0
+async-timeout==4.0.2
+attrs==22.1.0
+certifi==2022.9.14
+charset-normalizer==2.1.1
+click==8.1.3
+discord-py==2.0.1
+frozenlist==1.3.1
+idna==3.4
+mongoengine==0.24.2
+multidict==6.0.2
 munch==2.5.0
-pymongo==3.10.1
-pyyaml==5.3.1
-requests==2.24.0
-six==1.15.0
-typing-extensions==3.7.4.2
-urllib3==1.25.9
-websockets==8.1
-yarl==1.4.2
+pymongo==4.2.0
+pyyaml==6.0
+requests==2.28.1
+six==1.16.0
+urllib3==1.26.12
+yarl==1.8.1
