--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,38 +1,39 @@
 attrs==22.1.0
-certifi==2022.9.14
-coverage[toml]==6.4.4
+certifi==2022.9.24
+coverage[toml]==6.5.0
 distlib==0.3.6
+exceptiongroup==1.0.1
 filelock==3.8.0
 flake8==5.0.4
 iniconfig==1.1.1
 mccabe==0.7.0
 packaging==21.3
-pipenv==2022.9.8
-platformdirs==2.5.2
+pipenv==2022.11.5
+platformdirs==2.5.3
 pluggy==1.0.0
-py==1.11.0
 pycodestyle==2.9.1
 pyflakes==2.5.0
 pyparsing==3.0.9
-pytest==7.1.3
-pytest-cov==3.0.0
-setuptools==65.3.0
+pytest==7.2.0
+pytest-cov==4.0.0
+setuptools==65.5.1
 tomli==2.0.1
-virtualenv==20.16.5
+virtualenv==20.16.6
 virtualenv-clone==0.5.7
 yapf==0.32.0
-aiohttp==3.8.1
-aiosignal==1.2.0
+aiohttp==3.8.3
+aiosignal==1.3.1
 async-timeout==4.0.2
 charset-normalizer==2.1.1
 click==8.1.3
 discord-py==2.0.1
-frozenlist==1.3.1
+dnspython==2.2.1
+frozenlist==1.3.3
 idna==3.4
 mongoengine==0.24.2
 multidict==6.0.2
 munch==2.5.0
-pymongo==4.2.0
+pymongo==4.3.2
 pyyaml==6.0
 requests==2.28.1
 six==1.16.0
