--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,18 @@
-aiohttp==3.8.1
-aiosignal==1.2.0
+aiohttp==3.8.3
+aiosignal==1.3.1
 async-timeout==4.0.2
 attrs==22.1.0
-certifi==2022.9.14
+certifi==2022.9.24
 charset-normalizer==2.1.1
 click==8.1.3
 discord-py==2.0.1
-frozenlist==1.3.1
+dnspython==2.2.1
+frozenlist==1.3.3
 idna==3.4
 mongoengine==0.24.2
 multidict==6.0.2
 munch==2.5.0
-pymongo==4.2.0
+pymongo==4.3.2
 pyyaml==6.0
 requests==2.28.1
 six==1.16.0
