Update dependencies for tox.

--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,10 @@ skip_missing_interpreters = True
 
 [testenv]
 deps = pipenv>=9.0.1
+       pytest
+       pytest-cov
+       toml
+       yapf
 usedevelop = True
 envdir = {toxinidir}/.venv
 
