--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,23 +2,25 @@ attrs==22.1.0
 certifi==2022.9.24
 coverage[toml]==6.5.0
 distlib==0.3.6
-exceptiongroup==1.0.1
+exceptiongroup==1.0.4
 filelock==3.8.0
-flake8==5.0.4
+flake8==6.0.0
 iniconfig==1.1.1
 mccabe==0.7.0
 packaging==21.3
-pipenv==2022.11.5
-platformdirs==2.5.3
+pbr==5.11.0
+pipenv==2022.11.25
+platformdirs==2.5.4
 pluggy==1.0.0
-pycodestyle==2.9.1
-pyflakes==2.5.0
+pycodestyle==2.10.0
+pyflakes==3.0.1
 pyparsing==3.0.9
 pytest==7.2.0
 pytest-cov==4.0.0
-setuptools==65.5.1
+setuptools==65.6.3
+toml==0.10.2
 tomli==2.0.1
-virtualenv==20.16.6
+virtualenv==20.16.7
 virtualenv-clone==0.5.7
 yapf==0.32.0
 aiohttp==3.8.3
@@ -26,16 +28,16 @@ aiosignal==1.3.1
 async-timeout==4.0.2
 charset-normalizer==2.1.1
 click==8.1.3
-discord-py==2.0.1
+discord-py==2.1.0
 dnspython==2.2.1
 frozenlist==1.3.3
 idna==3.4
 mongoengine==0.24.2
 multidict==6.0.2
 munch==2.5.0
-pymongo==4.3.2
+pymongo==4.3.3
 pyyaml==6.0
 requests==2.28.1
 six==1.16.0
-urllib3==1.26.12
+urllib3==1.26.13
 yarl==1.8.1
