--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,15 @@
 [tox]
 envlist = {py38,py39,py310}, run_yapf
 minversion = 2.5.0
+recreate = True
 skip_missing_interpreters = True
 
 [testenv]
-deps = pipenv>=9.0.1
+deps = pip>=21.3
+       pipenv>=9.0.1
        pytest
        pytest-cov
+       setuptools>=64
        toml
        yapf
 usedevelop = True
