--- a/Pipfile
+++ b/Pipfile
@@ -13,13 +13,15 @@ mongoengine = "*"
 pyyaml = "*"
 munch = "*"
 click = "*"
+certifi = ">=2012.12.7"
 
 [dev-packages]
 flake8 = "*"
 yapf = "*"
+pip = ">=21.3"
 pipenv = "*"
 pytest = "*"
 pytest-cov = "*"
 toml = "*"
-setuptools = "*"
+setuptools = ">=64"
 pbr = "*"
