--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,7 @@ verify_ssl = true
 python_version = "3.8"
 
 [packages]
-requests = "*"
+requests = ">=2.31"
 discord-py = ">=2.0.0"
 mongoengine = "*"
 pyyaml = "*"
