Remove pytest as it is incompatible with click applications * Update dependencies.

--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,7 @@ python_version = "3.8"
 
 [packages]
 requests = ">=2.31"
-discord-py = ">=2.0.0"
+"discord.py" = ">=2.0.0"
 mongoengine = "*"
 pyyaml = "*"
 munch = "*"
@@ -20,8 +20,5 @@ flake8 = "*"
 yapf = "*"
 pip = ">=21.3"
 pipenv = "*"
-pytest = "*"
-pytest-cov = "*"
-toml = "*"
 setuptools = ">=64"
 pbr = "*"
