--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,8 @@ skip_missing_interpreters = True
 deps = pip>=21.3
        pipenv>=9.0.1
        setuptools>=65.5.1
+       flake8
+       toml
        yapf
 usedevelop = True
 envdir = {toxinidir}/.venv
