Require Python 3.8.1 or newer * Add toml to install dependencies in tox.ini

--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -31,4 +31,4 @@ jobs:
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         pr-branch: "master"
-        update-command: "'pipenv update && tox -e py38'"
+        update-command: "'pipenv --python `which python3` update && tox -e py38'"
