--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ url = "https://pypi.python.org/simple"
 verify_ssl = true
 
 [requires]
-python_version = "3.8"
+python_full_version = ">=3.8.1"
 
 [packages]
 requests = ">=2.31"
