--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-aiohttp==3.9.5
+aiohappyeyeballs==2.3.4
+aiohttp==3.10.1
 aiosignal==1.3.1
 async-timeout==4.0.3
-attrs==23.2.0
+attrs==24.1.0
 certifi==2024.7.4
 charset-normalizer==3.3.2
 click==8.1.7
