--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,5 +1,5 @@
 certifi==2024.8.30
-distlib==0.3.8
+distlib==0.3.9
 filelock==3.16.1
 flake8==7.1.1
 importlib-metadata==8.5.0
@@ -17,11 +17,11 @@ virtualenv==20.26.6
 yapf==0.40.2
 zipp==3.20.2
 aiohappyeyeballs==2.4.3
-aiohttp==3.10.9
+aiohttp==3.10.10
 aiosignal==1.3.1
 async-timeout==4.0.3
 attrs==24.2.0
-charset-normalizer==3.3.2
+charset-normalizer==3.4.0
 click==8.1.7
 discord.py==2.4.0
 dnspython==2.6.1
@@ -30,9 +30,10 @@ idna==3.10
 mongoengine==0.29.1
 multidict==6.1.0
 munch==4.0.0
+propcache==0.2.0
 pymongo==4.10.1
 pyyaml==6.0.2
 requests==2.32.3
 typing-extensions==4.12.2
 urllib3==2.2.3
-yarl==1.13.1
+yarl==1.15.2
