--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -23,7 +23,7 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y python3-pip tox
-        pip install --upgrade pip
+        pip install --upgrade pip setuptools wheel
         pip install pipenv
 
     - name: Run auto dependency update
