--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -8,26 +8,42 @@ jobs:
       fail-fast: true
       matrix:
         include:
-          - name: Ubuntu 20.04 - Python 3.8
-            os: ubuntu-20.04
+          - name: Ubuntu 22.04 - Python 3.8
+            os: ubuntu-22.04
             python-minor: 8
 
-          - name: Ubuntu 20.04 - Python 3.9
-            os: ubuntu-20.04
+          - name: Ubuntu 22.04 - Python 3.9
+            os: ubuntu-22.04
             python-minor: 9
 
           - name: Ubuntu 22.04 - Python 3.10
             os: ubuntu-22.04
             python-minor: 10
 
+          - name: Ubuntu 22.04 - Python 3.11
+            os: ubuntu-22.04
+            python-minor: 11
+
+          - name: Ubuntu 24.04 - Python 3.12
+            os: ubuntu-24.04
+            python-minor: 12
+
+          - name: Ubuntu 24.04 - Python 3.13
+            os: ubuntu-24.04
+            python-minor: 13
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
 
+    - uses: actions/setup-python@v5
+      with:
+        python-version: '3.${{ matrix.python-minor }}'
+
     - name: Install packages
       run: |
         sudo apt-get update
-        sudo apt-get install -y python3.${{ matrix.python-minor }} python3.${{ matrix.python-minor }}-minimal python3.${{ matrix.python-minor }}-dev python3-pip tox
+        sudo apt-get install -y python3-pip tox
 
     - name: Setup Python environment
       run: |
