--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,21 +1,20 @@
 certifi==2025.1.31
 distlib==0.3.9
 filelock==3.16.1
-flake8==7.1.1
-importlib-metadata==8.5.0
+flake8==7.1.2
 mccabe==0.7.0
-packaging==24.1
-pbr==6.1.0
-pip==24.3.1
-pipenv==2024.3.1
+packaging==25.0
+pbr==6.1.1
+pip==25.0.1
+pipenv==2024.4.1
 platformdirs==4.3.6
 pycodestyle==2.12.1
 pyflakes==3.2.0
-setuptools==75.3.0
-tomli==2.0.2
-virtualenv==20.27.1
-yapf==0.40.2
-zipp==3.20.2
+setuptools==75.3.2
+tomli==2.2.1
+virtualenv==20.30.0
+wheel==0.45.1
+yapf==0.43.0
 aiohappyeyeballs==2.4.4
 aiohttp==3.10.11
 aiosignal==1.3.1
